# YaGE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
CMake/: dxc.cmake
Source/: CMakeLists.txt
Source/Examples/: CMakeLists.txt
Source/Examples/HelloTriangle/: CMakeLists.txt  HelloTriangle.hlsl  Main.cpp
Source/Examples/TextureViewer/: CMakeLists.txt  Main.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/YaGE/Core/: Common.h  Exception.cpp  Exception.h  Hash.cpp  Hash.h  String.cpp  String.h  StringView.cpp  StringView.h  Window.cpp  Window.h
Source/Runtime/YaGE/Graphics/: Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandBuffer.cpp  CommandBuffer.h  DepthBuffer.cpp  DepthBuffer.h  Descriptor.cpp  Descriptor.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.cpp  GpuResource.h  PipelineState.cpp  PipelineState.h  PixelBuffer.cpp  PixelBuffer.h  RenderDevice.cpp  RenderDevice.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
Source/Runtime/YaGE/Math/: AxisAlignedBox.h  BoundingSphere.h  Matrix3.h  Matrix4.h  Numbers.h  Quaternion.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
Source/Runtime/YaGE/Resource/: Image.cpp  Image.h
Source/Runtime/YaGE/Scene/: Camera.h
